--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -2,7 +2,7 @@
 baseurl: https://alecthw.github.io
 languageCode: zh-cn
 paginate: 5
-title: 小甲哥
+title: 小甲哥の垃圾工厂
 
 # Theme i18n support
 # Available values: en, fr, id, ja, ko, pt-br, zh-cn, zh-tw, es, de, nl, it, th, el, uk, ar
