--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,9 +4,21 @@ on:
   push:
     branches:
       - master
+    paths-ignore:
+      - ".github/**"
+      - ".vscode/**"
+      - ".gitignore"
+      - "LICENSE"
+      - "README.md"
   pull_request:
     branches:
       - master
+    paths-ignore:
+      - ".github/**"
+      - ".vscode/**"
+      - ".gitignore"
+      - "LICENSE"
+      - "README.md"
 
 permissions:
   contents: write
