--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,19 +20,19 @@ on:
       - "LICENSE"
       - "README.md"
 
-permissions:
-  contents: write
-
 jobs:
   build:
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: write
 
     steps:
       - uses: actions/checkout@v3
 
       - uses: actions/setup-go@v4
         with:
-          go-version: "^1.20.0"
+          go-version: "^1.21.0"
       - run: go version
 
       - name: Setup Hugo
@@ -44,7 +44,7 @@ jobs:
       - name: Build
         run: hugo --minify --gc
 
-      - name: Deploy
+      - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           branch: gh-pages
