--- a/.github/workflows/update-theme.yml
+++ b/.github/workflows/update-theme.yml
@@ -5,13 +5,13 @@ on:
     - cron: "0 20 * * 0"
   workflow_dispatch:
 
-permissions:
-  contents: write
-
 jobs:
-  build:
+  update-theme:
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: write
+    
     steps:
       - uses: actions/checkout@v3
 
