--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -6,7 +6,7 @@ title: 小甲哥の垃圾工厂
 
 # Theme i18n support
 # Available values: en, fr, id, ja, ko, pt-br, zh-cn, zh-tw, es, de, nl, it, th, el, uk, ar
-DefaultContentLanguage: zh-cn
+defaultContentLanguage: zh-cn
 
 # Set hasCJKLanguage to true if DefaultContentLanguage is in [zh-cn ja ko]
 # This will make .Summary and .WordCount behave correctly for CJK languages.
@@ -14,3 +14,6 @@ hasCJKLanguage: true
 
 # Change it to your Disqus shortname before using
 disqusShortname: alecthw-github-io
+
+frontmatter:
+  lastmod: [":fileModTime", "lastmod"]
