--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,7 @@
 name: Deploy to Github Pages
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - master
@@ -49,5 +50,16 @@ jobs:
         with:
           branch: gh-pages
           folder: public
+          clean: true
+          single-commit: true
+
+      - name: Build projectv.cc
+        run: hugo --minify --gc --baseURL "https://www.projectv.cc/" --destination public_projectv.cc
+
+      - name: Deploy projectv.cc
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          branch: projectv.cc
+          folder: public_projectv.cc
           clean: true
           single-commit: true
