--- a/config/_default/menu.yaml
+++ b/config/_default/menu.yaml
@@ -2,7 +2,7 @@
 main:
   - identifier: tag
     name: TAG
-    url: https://tagss08.pro/#/auth/2neqgxFl
+    url: https://558343.dedicated-afflink.com/#/auth/2neqgxFl
     params:
       icon: flame
       newtab: true
