--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -21,6 +21,7 @@ sidebar:
     local: true
     src: img/avatar.gif
 article:
+  headingAnchor : false
   math: false
   readingTime: true
   license:
