--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -1,7 +1,6 @@
 # Change baseurl before deploy
 baseurl: https://alecthw.github.io
 languageCode: zh-cn
-paginate: 5
 title: 小甲哥の垃圾工厂
 
 # Theme i18n support
@@ -14,6 +13,9 @@ hasCJKLanguage: true
 
 # Change it to your Disqus shortname before using
 disqusShortname: alecthw-github-io
+
+pagination:
+  pagerSize: 5
 
 frontmatter:
   lastmod: [":fileModTime", "lastmod"]
